Fixing Pipeline script